<package format="2">
  <name>point_cloud_color</name>
  <version>1.2.1</version>
  <description>
    Package for coloring point clouds using calibrated cameras.
  </description>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>
  
  <url>https://github.com/ctu-vras/point_cloud_color</url>
  <author>Tomas Petricek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>point_cloud_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>point_cloud_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <nodelet plugin="${prefix}/point_cloud_color_plugins.xml" />
  </export>
</package>

